Fix scrollbar inception

--- a/app/events/style.module.scss
+++ b/app/events/style.module.scss
@@ -4,7 +4,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     max-width: 100vw;
 
     @include mobile {
