--- a/app/notifications/style.module.scss
+++ b/app/notifications/style.module.scss
@@ -2,7 +2,6 @@
 
 .page {
     flex: 1;
-    height: 100vh;
     overflow: auto;
     @include mobile {
         overflow: initial;
